force-app/main/default/objects/Inventory_Snapshot__c/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Snapshots</relationshipLabel>
    <relationshipName>Inventory_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>