force-app/main/default/objects/Inventory_Snapshot__c/fields/Lost__c.field-meta.xml
<CustomField>
    <fullName>Lost__c</fullName>
    <label>Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>