force-app/main/default/objects/Inventory_Snapshot__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <label>Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>