force-app/main/default/objects/Inventory_Snapshot__c/fields/Rebranding__c.field-meta.xml
<CustomField>
    <fullName>Rebranding__c</fullName>
    <label>Rebranding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>