force-app/main/default/objects/Inventory_Snapshot__c/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <label>Retired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>