force-app/main/default/objects/Inventory_Snapshot__c/fields/Tool_Inventory_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_Inventory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tool Inventory Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Inventory Snapshots</relationshipLabel>
    <relationshipName>Inventory_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>