force-app/main/default/objects/Inventory_Snapshot__c/fields/Total_Inventory_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory_Quantity__c</fullName>
    <label>Total Inventory Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>