force-app/main/default/objects/Inventory_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affiliate__c</columns>
    <columns>Tool_Inventory_Name__c</columns>
    <columns>Total_Inventory_Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>